--- a/model_uncertainty.tex
+++ b/model_uncertainty.tex
@@ -264,7 +264,7 @@ the true uncertainty $W^\dagger$.
   }\label{fig:markdown_bellman_mpc_chi2}
 \end{figure}
 
-
+\todo[inline]{Shall we argue for Bellman robustness as with parabolic equations?}
 \biblio
 \end{document}
 %%% Local Variables:
