Move appendix after references

--- a/main.tex
+++ b/main.tex
@@ -63,12 +63,14 @@ approximate dynamic programming
 % \subfile{expected_utility}
 \subfile{conclusion}
 
-\appendix
-\subfile{appendix_policydiff}
-
 % Bibliography:
 \clearpage
 \bibliographystyle{abbrvnat}
 \bibliography{references}
+
+
+%\appendix
+\subfile{appendix_policydiff}
+
 
 \end{document}
