--- a/appendix_policydiff.tex
+++ b/appendix_policydiff.tex
@@ -4,8 +4,8 @@
 
 \listoftodos
 
-\section{Bellman and CEC parameter comparisons}\label{sec:parameter_comparison}
-This paper contains many numerical experiments on a system
+\section*{Appendix: Bellman and CEC parameter comparisons}\label{sec:parameter_comparison}
+This article contains many numerical experiments on a system
 with a fixed combination of the five parameters
 termination time $T$, unsold items cost $C$, uncertainty $\gamma$, and
 demand function parameters $q_1,q_2$.
@@ -45,17 +45,17 @@ This comparison is shown in \Cref{fig:policy_diff_heatmaps}.
     parameter $\gamma$, with higher uncertainty increasing the
     difference.
     The white dot on the bottom, left plot corresponds to the
-    parameters chosen for the experiments in this paper.
+    parameters chosen for the experiments in this article.
   }\label{fig:policy_diff_heatmaps}
 \end{figure}
 
-The parameters chosen in this paper's numerical experiments
+The parameters chosen in this article's numerical experiments
 are $C=1,\gamma=0.05,q_1=e^2/3\approx2.5,q_2=3$. This point lies
 in the region where the $L^2$ difference is around $0.012$ --- see the
 white dot in the
 bottom, left subfigure in \Cref{fig:policy_diff_heatmaps}.
 This difference is in the lower range of what we see for all the
-combinations of parameters, so the conclusions made in the paper
+combinations of parameters, so the conclusions made in the article
 should be considered as relevant for a wider range of systems.
 
 \biblio
